--- a/pass.html
+++ b/pass.html
@@ -18,7 +18,7 @@
     <input type ="password" id="secretphrase" value ="Let me in"> <br><br>
     <label for="phrase">Enter a phrase </label>
     <input type ="text" id="phrase"  autofocus> <br><br>
-    <input type="button" class ="btn btn primary" onclick="processPhrase()" value="Check the phrase"/>
+    <input type="button" style="background-color: rgb(22,44,37)" btn btn primary" onclick="processPhrase()" value="Check the phrase"/>
 
 </form>
 <br>
