did required changes

--- a/pass.html
+++ b/pass.html
@@ -23,7 +23,7 @@
     <br>
     <br>
 
-    <input type="button" onclick=" processPhrase()" value="Check the Phrase">
+    <input type="button" style="background-color: rgb(233, 42, 223);" onclick=" processPhrase()" value="Check the Phrase">
     <br>
 
 </form>
