did required changes

--- a/pass.html
+++ b/pass.html
@@ -35,6 +35,12 @@
     <img id="animals" src="antelope.jpg" class="img-fluid" alt="antelope" onclick="newImage(this)"
         height="200" width="200">
 </div>
+<div class="container">
+    <div class="d-flex justify-content-between">
+            <a href="antelope.jpg" alt="antelope" class="img-thumbnail">
+                <img src="antelope.jpg" width="400px" height="400px">
+            </a>
+</div>
 
 <script>
     count=0;
